--- a/index.html
+++ b/index.html
@@ -10,32 +10,103 @@
       <div class="main-img">
         <h6>Travel</h6>
         <div class="flex">
-          <div class="get-start-offer">
+          <div class="start-offer">
             <h2>
-              Get ready<br />collection of the most beautiful places and
-              experience
+              Get ready<br />collection of the most <br />
+              beautiful places <br />
+              and experience
             </h2>
 
-            <button>Get started</button>
+            <button class="get-started">Get started</button>
           </div>
 
           <div class="location-icon">
             <img
               src="./images/location-vector.svg"
               alt="top-icn"
-              class="top-icn"
+              class="top-dot"
             />
             <img src="./images/Line 1.svg" alt="line-icn" class="line-icn" />
             <img
               src="./images/location-vector.svg"
-              alt="bottom-icn"
-              class="bottom-icn"
+              alt="top-icn"
+              class="bottom-dot"
             />
           </div>
         </div>
       </div>
       <div class="info-wrapper">
-        <!-- right secttion -->
+        <div class="mnuln">
+          <button class="menu">
+            <img src="./images/menu-button.svg" alt="menu" />
+          </button>
+          <div class="links">
+            <a href="index.html">Discover</a>
+            <a href="index.html">Blog</a>
+          </div>
+        </div>
+        <form>
+          <button type="submit">
+            <img src="./images/search-icon.svg" alt="Search" class="search" />
+          </button>
+          <input
+            type="search"
+            class="search-form"
+            placeholder="Search"
+            required
+          />
+        </form>
+        <img src="./images/underline.jpg" alt="line" class="just" />
+
+        <a href="index.html" class="discover">Discover</a>
+        <div class="options">
+          <a href="index.html">Experience </a>
+          <a href="index.html">Places</a>
+          <a href="index.html">Housing</a>
+        </div>
+        <div class="gallery">
+          <div class="img-1">
+            <p class="big-p">Royal Galaxy</p>
+            <p class="little-p">Distance 1.2km</p>
+            <img
+              src="./images/orange-location.svg"
+              alt="location"
+              class="orange"
+            />
+          </div>
+
+          <div class="img-2">
+            <p class="big-p">Blue Moon Hotel</p>
+            <p class="little-p">Distance 1.2km</p>
+            <img
+              src="./images/orange-location.svg"
+              alt="location"
+              class="orange"
+            />
+          </div>
+          <div class="img-3">
+            <p class="big-p">Red Velvet Inn</p>
+            <p class="little-p">Distance 1.2km</p>
+            <img
+              src="./images/orange-location.svg"
+              alt="location"
+              class="orange"
+            />
+          </div>
+        </div>
+        <div class="slide-section">
+          <img
+            src="./images/slide-left.svg"
+            alt="slide-left"
+            class="slide-left"
+          />
+          <img
+            src="./images/slide-right.svg"
+            alt="slide-right"
+            class="slide-right"
+          />
+          <a href="index.html" class="see-all">See all</a>
+        </div>
       </div>
     </main>
   </body>
